Fixed missing margin above captcha

--- a/web/css/base/_form.less
+++ b/web/css/base/_form.less
@@ -118,6 +118,7 @@ button,
     .field + .field-recaptcha,
     .field + script + .field,
     .field + script + script + .field,
+    .field + [type=hidden] + .field,
     .field + .field {
         margin-top: @3;
     }
